# sendbooster_agv_simulation

./: CMakeLists.txt  README.md  package.xml
agv_web_control/: README.md  docker-compose.yml  setup_default_map.py  start.sh  start_backend.sh  start_frontend.sh
agv_web_control/backend/: Dockerfile  config.py  database.py  main.py  requirements.txt
agv_web_control/backend/models/: __init__.py  history.py  map.py  robot.py  task.py
agv_web_control/backend/ros2_bridge/: __init__.py  node.py  robot_state.py
agv_web_control/backend/routers/: __init__.py  history.py  maps.py  robots.py  tasks.py
agv_web_control/backend/websocket/: __init__.py  manager.py
agv_web_control/data/: agv_control.db
agv_web_control/data/maps/: default.pgm
agv_web_control/frontend/: Dockerfile  index.html  package-lock.json  package.json
agv_web_control/frontend/src/: App.tsx  index.css
agv_web_control/frontend/src/components/Dashboard/: ControlPanel.tsx  StatusPanel.tsx
agv_web_control/frontend/src/components/Map/: MapCanvas.tsx
agv_web_control/frontend/src/components/common/: Header.tsx  Notifications.tsx
agv_web_control/frontend/src/hooks/: useKeyboardControl.ts  useWebSocket.ts
agv_web_control/frontend/src/services/: api.ts
agv_web_control/frontend/src/store/: robotStore.ts
agv_web_control/frontend/src/types/: index.ts
include/: sendbooster_agv_drive.hpp
launch/: empty_world.launch.py  navigation2.launch.py  robot_state_publisher.launch.py  sendbooster_agv_house.launch.py  sendbooster_agv_world.launch.py  spawn_sendbooster_agv.launch.py
models/model_stl/meshes/sensors/: Intel_Realsense RPLIDAR A2.stl
models/model_stl/meshes/wheels/: sendbooster_agv_wheel.stl
models/sendbooster_agv/: sendbooster_agv.sdf
models/sendbooster_world/: model.config  model.sdf
models/sendbooster_world/meshes/: map.py  sendbooster_world.dae  sendbooster_world.stl
models/sendbooster_world/meshes/map/: map.yaml
src/: laser_scan_merger.cpp  pose_reinitializer.cpp  sendbooster_agv_drive.cpp
urdf/: sendbooster_agv.urdf
worlds/: empty_world.world  sendbooster_agv_world.world
