<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sendbooster_agv_simulation</name>
  <version>2.3.8</version>
  <description>
    Gazebo simulation package for the Sendbooster AGV
  </description>
  <maintainer email="roboticsmaster@naver.com">이성민</maintainer>
  <license>Apache 2.0</license>
  <author email="roboticsmaster@naver.com">이성민</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
